# scard_lock

./: CMakeLists.txt  README.md  RUN.bat  _resource_path.h  main.cpp  main.h  main_activity.cpp  main_activity.h  main_activity_type.h  main_draws.cpp  main_draws.h  main_fn.cpp  main_fn.h  main_include.h  main_scard_fn.cpp  main_scard_fn.h
.github/workflows/: cmake-window.yml
inc_lib/: winscard.lib
